--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "apphosting": [
     {
-      "backendId": "receptenapp",
+      "backendId": "recepten-app",
       "rootDir": ".",
       "ignore": [
         "node_modules",
@@ -10,7 +10,8 @@
         ".git/**",
         "firebase-debug.log",
         "firebase-debug.*.log"
-      ]
+      ],
+      "alwaysDeployFromSource": true
     }
   ],
   "firestore": {
